<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1b889b"
        tools:context="bysj.xwj.Login">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_main_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="83dp"
            android:text="@string/login_main_username"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/login_main_textusername"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/login_main_password"
            android:textSize="18sp"
            android:layout_below="@+id/username"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/username"
            android:layout_alignStart="@+id/username"
            android:ems="10"
            android:hint="@string/login_main_qingpassword"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginBottom="83dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:text="@string/login_denglu"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn1"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_toEndOf="@+id/btn1"
            android:layout_toRightOf="@+id/btn1"
            android:text="@string/login_zhuce"/>

    </RelativeLayout>



