<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b889b"
    tools:context="bysj.xwj.Zhuce_login">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_main_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="43dp"
        android:layout_toLeftOf="@+id/name"
        android:layout_toStartOf="@+id/name"
        android:text="@string/login_main_username"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_main_password"
        android:textSize="18sp"
        android:layout_below="@+id/name"
        android:layout_alignRight="@+id/txt1"
        android:layout_alignEnd="@+id/txt1"/>

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="确认密码："
        android:textSize="18sp"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/txt2"
        android:layout_alignEnd="@+id/txt2"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="请输入用户名"
        android:layout_alignBaseline="@+id/txt1"
        android:layout_alignBottom="@+id/txt1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="请输入密码"
        android:layout_alignBaseline="@+id/txt2"
        android:layout_alignBottom="@+id/txt2"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="请再次输入密码"
        android:layout_alignBaseline="@+id/txt3"
        android:layout_alignBottom="@+id/txt3"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionModeSplitBackground"
        android:text="注册"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_toLeftOf="@+id/repassword"
        android:layout_toStartOf="@+id/repassword"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionModeSplitBackground"
        android:text="返回"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"/>

</RelativeLayout>
